// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wrapper /> render without error 1`] = `
.c0 {
  position: relative;
  margin: 50px auto;
}

.c0 div {
  visibility: visible;
}

@media (hover:hover) {
  .c0:hover {
    cursor: pointer;
  }

  .c0:hover div {
    visibility: visible;
    opacity: 1;
  }
}

<div
  className="c0"
/>
`;

exports[`<Wrapper /> render without error 2`] = `
.c0 {
  position: relative;
  margin: 50px auto;
}

.c0 div {
  visibility: hidden;
}

@media (hover:hover) {
  .c0:hover {
    cursor: pointer;
  }

  .c0:hover div {
    visibility: visible;
    opacity: 0.4;
  }
}

<div
  className="c0"
/>
`;
